force-app/main/default/objects/WhatsApp_Inbound_Event__e/WhatsApp_Inbound_Event__e.object-meta.xml
<CustomObject>
    <label>WhatsApp Inbound Event</label>
    <pluralLabel>WhatsApp Inbound Events</pluralLabel>
</CustomObject>