force-app/main/default/objects/WhatsApp_Inbound_Event__e/fields/Customer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone__c</fullName>
    <description>Customer phone number</description>
    <label>Customer Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>