force-app/main/default/objects/WhatsApp_Inbound_Event__e/fields/Message_Content__c.field-meta.xml
<CustomField>
    <fullName>Message_Content__c</fullName>
    <description>Message text content</description>
    <label>Message Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>