force-app/main/default/objects/WhatsApp_Inbound_Event__e/fields/Message_ID__c.field-meta.xml
<CustomField>
    <fullName>Message_ID__c</fullName>
    <description>Message record ID</description>
    <label>Message ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>