force-app/main/default/objects/WhatsApp_Inbound_Event__e/fields/Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Type__c</fullName>
    <description>Type of WhatsApp message</description>
    <label>Message Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>